modified payment & removed console
